add more examples on reduce